--- a/login.html
+++ b/login.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body> 
+    <div class="main-login">
+        <div class="left-login">
+            <h1>Faça seu login<br>E entre para nosso time</h1>
+            <img src="Imagen/logo-removebg.png" alt="logo">
+
+        </div>
+        <div class="rigth-login">
+            <div class="card-login">
+                <h1>Login</h1>
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" name="usuario" placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" placeholder="Senha">
+                </div>
+                <button class="btn-login">Login</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
